// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugin examples > AWS target plugins > permission-boundary.js 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"0.15.2\\",
      \\"stackName\\": \\"root\\",
      \\"backend\\": \\"local\\"
    },
    \\"outputs\\": {}
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"aws\\": {
        \\"version\\": \\"4.52.0\\",
        \\"source\\": \\"aws\\"
      }
    },
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"/Users/hasan/repos/monada/wing/tools/hangar/tmp/terraform.root.tfstate\\"
      }
    }
  },
  \\"provider\\": {
    \\"aws\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"root_cloudBucket_4F3C4F53\\": {
        \\"bucket_prefix\\": \\"cloud-bucket-c87175e7-\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/Default\\",
            \\"uniqueId\\": \\"root_cloudBucket_4F3C4F53\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0\\": {
        \\"bucket_prefix\\": \\"code-c8b80a9a-\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/Code\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_cloudBucket_Encryption_8ED0CD9C\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/Encryption\\",
            \\"uniqueId\\": \\"root_cloudBucket_Encryption_8ED0CD9C\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_cloudBucket_PublicAccessBlock_319C1C2E\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/PublicAccessBlock\\",
            \\"uniqueId\\": \\"root_cloudBucket_PublicAccessBlock_319C1C2E\\"
          }
        }
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_cloudQueue_E3597F7A\\": {
        \\"name\\": \\"cloud-Queue-c86e03d8\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue/Default\\",
            \\"uniqueId\\": \\"root_cloudQueue_E3597F7A\\"
          }
        }
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_cloudQueue_EventSourceMapping_A2041279\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_cloudQueueOnMessagee46e5cb7_C394DE2A.function_name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue/EventSourceMapping\\",
            \\"uniqueId\\": \\"root_cloudQueue_EventSourceMapping_A2041279\\"
          }
        }
      }
    },
    \\"aws_s3_object\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"key\\": \\"asset.c86cd0c0c9dc1b0298aaebb2fb4561ba65c36c4795.438fc38ad238079f941f7530172ce962.zip\\",
        \\"source\\": \\"assets/root_cloudQueueOnMessagee46e5cb7_Asset_1C1D632C/438FC38AD238079F941F7530172CE962/archive.zip\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/S3Object\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"permissions_boundary\\": \\"some:fake:arn:SUPERADMIN\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRole\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicy_99F6B872\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject*\\\\\\",\\\\\\"s3:GetBucket*\\\\\\",\\\\\\"s3:List*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject*\\\\\\",\\\\\\"s3:GetBucket*\\\\\\",\\\\\\"s3:List*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:DeleteObject*\\\\\\",\\\\\\"s3:DeleteObjectVersion*\\\\\\",\\\\\\"s3:PutLifecycleConfiguration*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRolePolicy\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicy_99F6B872\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicyAttachment_D3D5C118\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRolePolicyAttachment\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicyAttachment_D3D5C118\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_C394DE2A\\": {
        \\"function_name\\": \\"cloud-Queue-OnMessage-e46e5cb7-c86cd0c0\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B.key}\\",
        \\"timeout\\": 30,
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"cloud-Queue-OnMessage-e46e5cb7-c86cd0c0\\",
            \\"BUCKET_NAME_d755b447\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
            \\"BUCKET_NAME_d755b447_IS_PUBLIC\\": \\"false\\"
          }
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/Default\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_C394DE2A\\"
          }
        }
      }
    }
  }
}"
`;

exports[`Plugin examples > AWS target plugins > replicate-s3.js 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"0.15.2\\",
      \\"stackName\\": \\"root\\",
      \\"backend\\": \\"local\\"
    },
    \\"outputs\\": {}
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"aws\\": {
        \\"version\\": \\"4.52.0\\",
        \\"source\\": \\"aws\\"
      }
    },
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"/Users/hasan/repos/monada/wing/tools/hangar/tmp/terraform.root.tfstate\\"
      }
    }
  },
  \\"provider\\": {
    \\"aws\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"root_cloudBucket_4F3C4F53\\": {
        \\"bucket_prefix\\": \\"cloud-bucket-c87175e7-\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/Default\\",
            \\"uniqueId\\": \\"root_cloudBucket_4F3C4F53\\"
          }
        }
      },
      \\"root_cloudBucket_ReplicaDefault_FAA1B938\\": {
        \\"bucket\\": \\"some-prefix\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/ReplicaDefault\\",
            \\"uniqueId\\": \\"root_cloudBucket_ReplicaDefault_FAA1B938\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0\\": {
        \\"bucket_prefix\\": \\"code-c8b80a9a-\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/Code\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCode_DA1304F3\\": {
        \\"bucket\\": \\"some-prefix\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/ReplicaCode\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCode_DA1304F3\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_cloudBucket_Encryption_8ED0CD9C\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/Encryption\\",
            \\"uniqueId\\": \\"root_cloudBucket_Encryption_8ED0CD9C\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_cloudBucket_PublicAccessBlock_319C1C2E\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/PublicAccessBlock\\",
            \\"uniqueId\\": \\"root_cloudBucket_PublicAccessBlock_319C1C2E\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"root_cloudBucket_ReplicaDefaultRole_F6AC926C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"s3.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Sid\\\\\\":\\\\\\"AllowS3Replication\\\\\\"}]}\\",
        \\"name\\": \\"some-prefix\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/ReplicaDefaultRole\\",
            \\"uniqueId\\": \\"root_cloudBucket_ReplicaDefaultRole_F6AC926C\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRole\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodeRole_9BA965EB\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"s3.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Sid\\\\\\":\\\\\\"AllowS3Replication\\\\\\"}]}\\",
        \\"name\\": \\"some-prefix\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/ReplicaCodeRole\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodeRole_9BA965EB\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"root_cloudBucket_ReplicaDefaultPolicy_CF3D8930\\": {
        \\"name\\": \\"some-prefix\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetReplicationConfiguration\\\\\\",\\\\\\"s3:ListBucket\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"]},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObjectVersionForReplication\\\\\\",\\\\\\"s3:GetObjectVersionAcl\\\\\\",\\\\\\"s3:GetObjectVersionTagging\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:ReplicateObject\\\\\\",\\\\\\"s3:ReplicateDelete\\\\\\",\\\\\\"s3:ReplicateTags\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_s3_bucket.root_cloudBucket_ReplicaDefault_FAA1B938.arn}/*\\\\\\"}]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/ReplicaDefaultPolicy\\",
            \\"uniqueId\\": \\"root_cloudBucket_ReplicaDefaultPolicy_CF3D8930\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodePolicy_89804110\\": {
        \\"name\\": \\"some-prefix\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetReplicationConfiguration\\\\\\",\\\\\\"s3:ListBucket\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.arn}/*\\\\\\"]},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObjectVersionForReplication\\\\\\",\\\\\\"s3:GetObjectVersionAcl\\\\\\",\\\\\\"s3:GetObjectVersionTagging\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.arn}/*\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:ReplicateObject\\\\\\",\\\\\\"s3:ReplicateDelete\\\\\\",\\\\\\"s3:ReplicateTags\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_ReplicaCode_DA1304F3.arn}/*\\\\\\"}]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/ReplicaCodePolicy\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodePolicy_89804110\\"
          }
        }
      }
    },
    \\"aws_iam_policy_attachment\\": {
      \\"root_cloudBucket_ReplicaDefaultPolicyAttachment_CDFF3C3B\\": {
        \\"name\\": \\"some-prefixpolicy-attachment\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"policy_arn\\": \\"\${aws_iam_policy.root_cloudBucket_ReplicaDefaultPolicy_CF3D8930.arn}\\",
        \\"roles\\": [
          \\"\${aws_iam_role.root_cloudBucket_ReplicaDefaultRole_F6AC926C.name}\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/ReplicaDefaultPolicyAttachment\\",
            \\"uniqueId\\": \\"root_cloudBucket_ReplicaDefaultPolicyAttachment_CDFF3C3B\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodePolicyAttachment_F468A155\\": {
        \\"name\\": \\"some-prefixpolicy-attachment\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"policy_arn\\": \\"\${aws_iam_policy.root_cloudQueueOnMessagee46e5cb7_ReplicaCodePolicy_89804110.arn}\\",
        \\"roles\\": [
          \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_ReplicaCodeRole_9BA965EB.name}\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/ReplicaCodePolicyAttachment\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodePolicyAttachment_F468A155\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_versioning\\": {
      \\"root_cloudBucket_SourceDefaultVersioning_F18F5ADE\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.id}\\",
        \\"versioning_configuration\\": {
          \\"status\\": \\"Enabled\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/SourceDefaultVersioning\\",
            \\"uniqueId\\": \\"root_cloudBucket_SourceDefaultVersioning_F18F5ADE\\"
          }
        }
      },
      \\"root_cloudBucket_ReplicaDefaultVersioning_EB8534D6\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_ReplicaDefault_FAA1B938.id}\\",
        \\"versioning_configuration\\": {
          \\"status\\": \\"Enabled\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/ReplicaDefaultVersioning\\",
            \\"uniqueId\\": \\"root_cloudBucket_ReplicaDefaultVersioning_EB8534D6\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_SourceCodeVersioning_22C5352C\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.id}\\",
        \\"versioning_configuration\\": {
          \\"status\\": \\"Enabled\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/SourceCodeVersioning\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_SourceCodeVersioning_22C5352C\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodeVersioning_E66ACB38\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_ReplicaCode_DA1304F3.id}\\",
        \\"versioning_configuration\\": {
          \\"status\\": \\"Enabled\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/ReplicaCodeVersioning\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodeVersioning_E66ACB38\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_replication_configuration\\": {
      \\"root_cloudBucket_ReplicaDefaultConfig_0CC8C208\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.id}\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudBucket_ReplicaDefaultRole_F6AC926C.arn}\\",
        \\"rule\\": [
          {
            \\"id\\": \\"some-prefix\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
            \\"status\\": \\"Enabled\\",
            \\"destination\\": {
              \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_ReplicaDefault_FAA1B938.arn}\\",
              \\"storage_class\\": \\"STANDARD\\"
            }
          }
        ],
        \\"depends_on\\": [
          \\"aws_s3_bucket_versioning.root_cloudBucket_ReplicaDefaultVersioning_EB8534D6\\",
          \\"aws_s3_bucket_versioning.root_cloudBucket_SourceDefaultVersioning_F18F5ADE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/ReplicaDefaultConfig\\",
            \\"uniqueId\\": \\"root_cloudBucket_ReplicaDefaultConfig_0CC8C208\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodeConfig_EB66DB4D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.id}\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_ReplicaCodeRole_9BA965EB.arn}\\",
        \\"rule\\": [
          {
            \\"id\\": \\"some-prefix\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
            \\"status\\": \\"Enabled\\",
            \\"destination\\": {
              \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_ReplicaCode_DA1304F3.arn}\\",
              \\"storage_class\\": \\"STANDARD\\"
            }
          }
        ],
        \\"depends_on\\": [
          \\"aws_s3_bucket_versioning.root_cloudQueueOnMessagee46e5cb7_ReplicaCodeVersioning_E66ACB38\\",
          \\"aws_s3_bucket_versioning.root_cloudQueueOnMessagee46e5cb7_SourceCodeVersioning_22C5352C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/ReplicaCodeConfig\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_ReplicaCodeConfig_EB66DB4D\\"
          }
        }
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_cloudQueue_E3597F7A\\": {
        \\"name\\": \\"cloud-Queue-c86e03d8\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue/Default\\",
            \\"uniqueId\\": \\"root_cloudQueue_E3597F7A\\"
          }
        }
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_cloudQueue_EventSourceMapping_A2041279\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_cloudQueueOnMessagee46e5cb7_C394DE2A.function_name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue/EventSourceMapping\\",
            \\"uniqueId\\": \\"root_cloudQueue_EventSourceMapping_A2041279\\"
          }
        }
      }
    },
    \\"aws_s3_object\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"key\\": \\"asset.c86cd0c0c9dc1b0298aaebb2fb4561ba65c36c4795.438fc38ad238079f941f7530172ce962.zip\\",
        \\"source\\": \\"assets/root_cloudQueueOnMessagee46e5cb7_Asset_1C1D632C/438FC38AD238079F941F7530172CE962/archive.zip\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/S3Object\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicy_99F6B872\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject*\\\\\\",\\\\\\"s3:GetBucket*\\\\\\",\\\\\\"s3:List*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject*\\\\\\",\\\\\\"s3:GetBucket*\\\\\\",\\\\\\"s3:List*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:DeleteObject*\\\\\\",\\\\\\"s3:DeleteObjectVersion*\\\\\\",\\\\\\"s3:PutLifecycleConfiguration*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRolePolicy\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicy_99F6B872\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicyAttachment_D3D5C118\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRolePolicyAttachment\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicyAttachment_D3D5C118\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_C394DE2A\\": {
        \\"function_name\\": \\"cloud-Queue-OnMessage-e46e5cb7-c86cd0c0\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B.key}\\",
        \\"timeout\\": 30,
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"cloud-Queue-OnMessage-e46e5cb7-c86cd0c0\\",
            \\"BUCKET_NAME_d755b447\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
            \\"BUCKET_NAME_d755b447_IS_PUBLIC\\": \\"false\\"
          }
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/Default\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_C394DE2A\\"
          }
        }
      }
    }
  }
}"
`;

exports[`Plugin examples > AWS target plugins > tf-s3-backend.js 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"0.15.2\\",
      \\"stackName\\": \\"root\\",
      \\"backend\\": \\"local\\"
    },
    \\"outputs\\": {}
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"aws\\": {
        \\"version\\": \\"4.52.0\\",
        \\"source\\": \\"aws\\"
      }
    },
    \\"backend\\": {
      \\"s3\\": {
        \\"bucket\\": \\"my-wing-bucket\\",
        \\"region\\": \\"us-east-1\\",
        \\"key\\": \\"some-state-file.tfstate\\"
      }
    }
  },
  \\"provider\\": {
    \\"aws\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"root_cloudBucket_4F3C4F53\\": {
        \\"bucket_prefix\\": \\"cloud-bucket-c87175e7-\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/Default\\",
            \\"uniqueId\\": \\"root_cloudBucket_4F3C4F53\\"
          }
        }
      },
      \\"root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0\\": {
        \\"bucket_prefix\\": \\"code-c8b80a9a-\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/Code\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_cloudBucket_Encryption_8ED0CD9C\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/Encryption\\",
            \\"uniqueId\\": \\"root_cloudBucket_Encryption_8ED0CD9C\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_cloudBucket_PublicAccessBlock_319C1C2E\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Bucket/PublicAccessBlock\\",
            \\"uniqueId\\": \\"root_cloudBucket_PublicAccessBlock_319C1C2E\\"
          }
        }
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_cloudQueue_E3597F7A\\": {
        \\"name\\": \\"cloud-Queue-c86e03d8\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue/Default\\",
            \\"uniqueId\\": \\"root_cloudQueue_E3597F7A\\"
          }
        }
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_cloudQueue_EventSourceMapping_A2041279\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_cloudQueueOnMessagee46e5cb7_C394DE2A.function_name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue/EventSourceMapping\\",
            \\"uniqueId\\": \\"root_cloudQueue_EventSourceMapping_A2041279\\"
          }
        }
      }
    },
    \\"aws_s3_object\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"key\\": \\"asset.c86cd0c0c9dc1b0298aaebb2fb4561ba65c36c4795.438fc38ad238079f941f7530172ce962.zip\\",
        \\"source\\": \\"assets/root_cloudQueueOnMessagee46e5cb7_Asset_1C1D632C/438FC38AD238079F941F7530172CE962/archive.zip\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/S3Object\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRole\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicy_99F6B872\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject*\\\\\\",\\\\\\"s3:GetBucket*\\\\\\",\\\\\\"s3:List*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject*\\\\\\",\\\\\\"s3:GetBucket*\\\\\\",\\\\\\"s3:List*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"},{\\\\\\"Action\\\\\\":[\\\\\\"s3:DeleteObject*\\\\\\",\\\\\\"s3:DeleteObjectVersion*\\\\\\",\\\\\\"s3:PutLifecycleConfiguration*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRolePolicy\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicy_99F6B872\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicyAttachment_D3D5C118\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/IamRolePolicyAttachment\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_IamRolePolicyAttachment_D3D5C118\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_cloudQueueOnMessagee46e5cb7_C394DE2A\\": {
        \\"function_name\\": \\"cloud-Queue-OnMessage-e46e5cb7-c86cd0c0\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_cloudQueueOnMessagee46e5cb7_IamRole_D8F85094.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_cloudQueueOnMessagee46e5cb7_Code_A7B6C6A0.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_cloudQueueOnMessagee46e5cb7_S3Object_E583CB6B.key}\\",
        \\"timeout\\": 30,
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"cloud-Queue-OnMessage-e46e5cb7-c86cd0c0\\",
            \\"BUCKET_NAME_d755b447\\": \\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}\\",
            \\"BUCKET_NAME_d755b447_IS_PUBLIC\\": \\"false\\"
          }
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"root/Default/cloud.Queue-OnMessage-e46e5cb7/Default\\",
            \\"uniqueId\\": \\"root_cloudQueueOnMessagee46e5cb7_C394DE2A\\"
          }
        }
      }
    }
  }
}"
`;
